<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainViewController">
            <connections>
                <outlet property="theTabBar" destination="glD-xN-S1F" id="fbJ-sj-WJf"/>
                <outlet property="view" destination="1" id="3"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="1">
            <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <tabBar contentMode="scaleToFill" id="glD-xN-S1F">
                    <rect key="frame" x="0.0" y="411" width="320" height="49"/>
                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                    <items>
                        <tabBarItem title="Fongs" image="Initial State-50.png" id="erf-VX-cuS"/>
                        <tabBarItem tag="1" title="Sound" image="Audio Wave-50.png" id="d68-EX-3b5"/>
                        <tabBarItem tag="2" title="Notes/Loops" image="Musical Notes-50.png" id="yiC-pm-hjb"/>
                        <tabBarItem tag="3" title="States" image="Add to Favorites-50.png" id="BDD-nT-bPJ"/>
                    </items>
                    <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
                            <color key="value" red="0.29803922772407532" green="0.29803922772407532" blue="0.29803922772407532" alpha="1" colorSpace="calibratedRGB"/>
                        </userDefinedRuntimeAttribute>
                    </userDefinedRuntimeAttributes>
                </tabBar>
            </subviews>
            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
        </view>
    </objects>
    <resources>
        <image name="Add to Favorites-50.png" width="25" height="25"/>
        <image name="Audio Wave-50.png" width="25" height="25"/>
        <image name="Initial State-50.png" width="25" height="25"/>
        <image name="Musical Notes-50.png" width="25" height="25"/>
    </resources>
</document>
